--- a/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
+++ b/source/Fasciculus.Eve.Assets/Fasciculus.Eve.Assets.csproj
@@ -40,4 +40,10 @@
     <ProjectReference Include="../Fasciculus.Steam/Fasciculus.Steam.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <MauiXaml Update="Pages\MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </MauiXaml>
+  </ItemGroup>
+
 </Project>
