--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources/SdeVersion">
-      <LogicalName>SdeVersion</LogicalName>
+    <EmbeddedResource Include="Resources/EveData">
+      <LogicalName>EveData</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 
