improved loading page

--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -16,6 +16,9 @@
     <EmbeddedResource Include="Resources/EveUniverse">
       <LogicalName>EveUniverse</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="Resources/EveNavigation">
+      <LogicalName>EveNavigation</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
