--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -7,4 +7,8 @@
         <MakeDir Directories="$(FasciculusInstalledPackagesDirectory)" />
     </Target>
 
+  <Target Name="CreateGeneratedDirectory" AfterTargets="AfterResolveReferences">
+    <MakeDir Directories="$(IntermediateOutputPath)/generated" />
+  </Target>
+
 </Project>
