--- a/source/Fasciculus.Eve/Fasciculus.Eve.csproj
+++ b/source/Fasciculus.Eve/Fasciculus.Eve.csproj
@@ -56,6 +56,7 @@
     <MauiImage Update="Resources\Images\market.png" Resize="True" BaseSize="32,32" />
     <MauiImage Update="Resources\Images\map.png" Resize="True" BaseSize="32,32" />
     <MauiImage Update="Resources\Images\planets.png" Resize="True" BaseSize="32,32" />
+    <MauiImage Update="Resources\Images\skills.png" Resize="True" BaseSize="32,32" />
     <MauiFont Include="Resources\Fonts\*" />
     <MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
   </ItemGroup>
