--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,10 +14,11 @@
   <!-- Compiler Settings -->
 
   <PropertyGroup>
-    <LangVersion>12.0</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
     <NoWarn>$(NoWarn),IDE0290,IDE0130</NoWarn>
+    <WarningsAsErrors>$(WarningsAsErrors),MVVMTK0045</WarningsAsErrors>
   </PropertyGroup>
   
   <!-- Package Settings -->
