--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,7 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.1" />
-    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="5.1.0" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.11" />
     <PackageVersion Include="Microsoft.Build.Utilities.Core" Version="17.12.6" />
@@ -19,10 +20,10 @@
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Console" Version="9.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
-    <PackageVersion Include="Microsoft.Maui.Controls" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.Maui.Core" Version="9.0.10" />
-    <PackageVersion Include="Microsoft.Maui.Essentials" Version="9.0.10" />
+    <PackageVersion Include="Microsoft.Maui.Controls" Version="9.0.21" />
+    <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="9.0.21" />
+    <PackageVersion Include="Microsoft.Maui.Core" Version="9.0.21" />
+    <PackageVersion Include="Microsoft.Maui.Essentials" Version="9.0.21" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageVersion Include="Microsoft.UI.Xaml" Version="2.8.6" />
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
@@ -33,6 +34,6 @@
     <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="9.0.0" />
-    <PackageVersion Include="YamlDotNet" Version="16.2.0" />
+    <PackageVersion Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
 </Project>
