--- a/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
+++ b/source/Fasciculus.Eve.Core/Fasciculus.Eve.Core.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
     <ProjectReference Include="../Fasciculus.Maui/Fasciculus.Maui.csproj" />
   </ItemGroup>
 
