--- a/source/Fasciculus.Extensions/Fasciculus.Extensions.csproj
+++ b/source/Fasciculus.Extensions/Fasciculus.Extensions.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;$(FasciculusDotNetTfm);$(FasciculusPlatforms)</TargetFrameworks>
-    <RootNamespace>Fasciculus.Extensions</RootNamespace>
+    <RootNamespace>Fasciculus</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
