--- a/source/Fasciculus.Steam/Fasciculus.Steam.csproj
+++ b/source/Fasciculus.Steam/Fasciculus.Steam.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
+    <ProjectReference Include="../Fasciculus.Windows/Fasciculus.Windows.csproj" />
   </ItemGroup>
 
 </Project>
