--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -29,6 +29,7 @@
     <PackageVersion Include="Microsoft.Win32.Registry" Version="5.0.0" />
     <PackageVersion Include="MSTest.TestAdapter" Version="3.6.3" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.6.3" />
+    <PackageVersion Include="NuGet.Versioning" Version="6.12.1" />
     <PackageVersion Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
     <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
