--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -19,17 +19,28 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <NoWarn>$(NoWarn),IDE0290,IDE0130</NoWarn>
     <WarningsAsErrors>$(WarningsAsErrors),MVVMTK0045</WarningsAsErrors>
+    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    <DebugType>portable</DebugType>
+    <Deterministic>true</Deterministic>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
   
   <!-- Package Settings -->
 
   <PropertyGroup>
     <VersionPrefix>0.1.1</VersionPrefix>
-    <VersionSuffix>dev.1</VersionSuffix>
+    <VersionSuffix>dev</VersionSuffix>
     <Version Condition="$(VersionSuffix) == ''">$(VersionPrefix)</Version>
     <Version Condition="$(VersionSuffix) != ''">$(VersionPrefix)-$(VersionSuffix)</Version>
+    <Authors>rhjoerg@gmail.com</Authors>
     <Company>The Fasciculus Project</Company>
-    <Copyright>The Fasciculus Project</Copyright>
+    <Copyright>Copyright (c) The Fasciculus Project</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <IsPackable>false</IsPackable>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -73,5 +84,9 @@
   <PropertyGroup>
     <FasciculusPlatforms Condition="'$(IncludeWindowsTargetFrameworks)' == 'true'">$(FasciculusDotNetWindowsTfm);$(FasciculusPlatforms)</FasciculusPlatforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All" />
+  </ItemGroup>
 
 </Project>
