--- a/.github/ISSUE_TEMPLATE/02_api_proposal.yml
+++ b/.github/ISSUE_TEMPLATE/02_api_proposal.yml
@@ -2,6 +2,10 @@ name: API Suggestion
 description: Propose adding a new API to the public API surface
 title: "[API Proposal]: "
 labels: [api-suggestion]
+  - type: markdown
+    attributes:
+      value: |
+        We welcome API proposals!
   - type: textarea
     id: background
     attributes:
