--- a/source/Fasciculus.Extensions/Fasciculus.Extensions.csproj
+++ b/source/Fasciculus.Extensions/Fasciculus.Extensions.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 
