--- a/source/Fasciculus.Maui/Fasciculus.Maui.csproj
+++ b/source/Fasciculus.Maui/Fasciculus.Maui.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>$(FasciculusDotNetTfm)</TargetFramework>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <Import Project="Docs/Description.props" />
+  <Import Project="Docs/ReleaseNotes.props" />
+
+  <PropertyGroup>
+    <IsPackable>true</IsPackable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +20,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
