--- a/source/Fasciculus.Maui/Fasciculus.Maui.csproj
+++ b/source/Fasciculus.Maui/Fasciculus.Maui.csproj
@@ -12,6 +12,7 @@
     <IsPackable>true</IsPackable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageIcon>fasciculus.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +26,7 @@
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
+    <None Include="Resources/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
