--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -31,9 +31,9 @@
     <PackageVersion Include="MSTest.TestAdapter" Version="3.6.3" />
     <PackageVersion Include="MSTest.TestFramework" Version="3.6.3" />
     <PackageVersion Include="NuGet.Versioning" Version="6.12.1" />
+    <PackageVersion Include="SkiaSharp" Version="3.116.1" />
     <PackageVersion Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
     <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
-    <PackageVersion Include="Svg.Skia" Version="2.0.0.4" />
     <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="9.0.0" />
