--- a/source/Fasciculus.Core/Fasciculus.Core.csproj
+++ b/source/Fasciculus.Core/Fasciculus.Core.csproj
@@ -7,8 +7,8 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
-  <Import Project="Docs/Description.props" />
-  <Import Project="Docs/ReleaseNotes.props" />
+  <Import Project="Properties/Description.props" />
+  <Import Project="Properties/ReleaseNotes.props" />
 
   <PropertyGroup>
     <IsPackable>true</IsPackable>
@@ -33,7 +33,7 @@
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
-    <None Include="Resources/fasciculus.png" Pack="true" PackagePath="/" />
+    <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
   <Target Name="LogBuildInfo" BeforeTargets="BeforeResolveReferences">
