--- a/source/Fasciculus.Maui/Fasciculus.Maui.csproj
+++ b/source/Fasciculus.Maui/Fasciculus.Maui.csproj
@@ -5,8 +5,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
-  <Import Project="Docs/Description.props" />
-  <Import Project="Docs/ReleaseNotes.props" />
+  <Import Project="Properties/Description.props" />
+  <Import Project="Properties/ReleaseNotes.props" />
 
   <PropertyGroup>
     <IsPackable>true</IsPackable>
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="/" />
-    <None Include="Resources/fasciculus.png" Pack="true" PackagePath="/" />
+    <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
 
 </Project>
