--- a/source/Fasciculus.Site/Fasciculus.Site.csproj
+++ b/source/Fasciculus.Site/Fasciculus.Site.csproj
@@ -1,8 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
-    <OutputType>Exe</OutputType>
+    <TargetFrameworks>$(FasciculusDotNetTfm)</TargetFrameworks>
+    <RootNamespace>Fasciculus.GitHub</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
+  </ItemGroup>
 
 </Project>
