experimenting with roslyn

--- a/source/Fasciculus.Experiments.ApiDoc/Fasciculus.Experiments.ApiDoc.csproj
+++ b/source/Fasciculus.Experiments.ApiDoc/Fasciculus.Experiments.ApiDoc.csproj
@@ -5,4 +5,12 @@
     <OutputType>Exe</OutputType>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.Common" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+  </ItemGroup>
+
 </Project>
