--- a/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
+++ b/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
@@ -16,6 +16,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Build.Locator" />
+    <PackageReference Include="Microsoft.CodeAnalysis" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" />
     <PackageReference Include="NuGet.Frameworks" />
   </ItemGroup>
 
