--- a/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
+++ b/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>$(FasciculusDotNetTfm)</TargetFrameworks>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <Import Project="Properties/Description.props" />
