implemented required features

--- a/source/Fasciculus.PackageVersions/Fasciculus.PackageVersions.csproj
+++ b/source/Fasciculus.PackageVersions/Fasciculus.PackageVersions.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="NuGet.Protocol" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
   </ItemGroup>
 
