more syntax highlighting

--- a/source/Fasciculus.Experiments.SyntaxHighlighting/Fasciculus.Experiments.SyntaxHighlighting.csproj
+++ b/source/Fasciculus.Experiments.SyntaxHighlighting/Fasciculus.Experiments.SyntaxHighlighting.csproj
@@ -6,8 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ColorCode.Core" />
+    <PackageReference Include="ColorCode.HTML" />
     <PackageReference Include="Markdig" />
-    <PackageReference Include="Microsoft.ClearScript.Complete" />
   </ItemGroup>
 
   <ItemGroup>
