--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,8 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
   </PropertyGroup>
   <ItemGroup>
+    <PackageVersion Include="ColorCode.Core" Version="2.0.15" />
+    <PackageVersion Include="ColorCode.HTML" Version="2.0.15" />
     <PackageVersion Include="CommunityToolkit.Maui" Version="10.0.0" />
     <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="5.1.0" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
