--- a/source/Fasciculus.Maui/Fasciculus.Maui.csproj
+++ b/source/Fasciculus.Maui/Fasciculus.Maui.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>$(FasciculusDotNetTfm)</TargetFramework>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <Import Project="Properties/Description.props" />
