--- a/source/Fasciculus.Eve/Fasciculus.Eve.csproj
+++ b/source/Fasciculus.Eve/Fasciculus.Eve.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0-windows$(WindowsTargetFrameworkVersion)</TargetFrameworks>
-    <OutputType>Exe</OutputType>
+    <TargetFrameworks>$(FasciculusDotNetWindowsTfm)</TargetFrameworks>
+    <OutputType>WinExe</OutputType>
     <UseMaui>true</UseMaui>
     <SingleProject>true</SingleProject>
     <ImplicitUsings>enable</ImplicitUsings>
