--- a/source/Fasciculus.Windows/Fasciculus.Windows.csproj
+++ b/source/Fasciculus.Windows/Fasciculus.Windows.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>$(FasciculusDotNetWindowsTfm)</TargetFrameworks>
+    <TargetFrameworks>net9.0-windows10.0.19041.0</TargetFrameworks>
     <RootNamespace>Fasciculus.Windows</RootNamespace>
   </PropertyGroup>
 
