--- a/source/Fasciculus.Steam.Tests/Fasciculus.Steam.Tests.csproj
+++ b/source/Fasciculus.Steam.Tests/Fasciculus.Steam.Tests.csproj
@@ -1,7 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>$(FasciculusDotNetWindowsTfm)</TargetFramework>
+    <TargetFramework>net9.0-windows10.0.19041.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
