--- a/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
+++ b/source/Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj
@@ -27,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Compilers\CompilationUnitCompiler.Parameters.cs" />
     <None Include="README.md" Pack="true" PackagePath="/" />
     <None Include="Properties/fasciculus.png" Pack="true" PackagePath="/" />
   </ItemGroup>
