simplified Fasciculus.PackageVersions

--- a/source/Fasciculus.PackageVersions/Fasciculus.PackageVersions.csproj
+++ b/source/Fasciculus.PackageVersions/Fasciculus.PackageVersions.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Fasciculus.Core/Fasciculus.Core.csproj" />
+    <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
   </ItemGroup>
 
 </Project>
