--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -44,8 +44,8 @@
     <PackageVersion Include="NuGet.Versioning" Version="6.12.1" />
     <PackageVersion Include="SkiaSharp" Version="3.116.1" />
     <PackageVersion Include="SQLitePCLRaw.bundle_green" Version="2.1.10" />
-    <PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />
-    <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.3" />
+    <!--<PackageVersion Include="Statiq.Web" Version="1.0.0-beta.60" />-->
+    <!--<PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.3" />-->
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
     <PackageVersion Include="System.Memory" Version="4.6.0" />
     <PackageVersion Include="System.Threading.Tasks.Dataflow" Version="9.0.1" />
