working on licenses

--- a/source/Fasciculus.Site/Fasciculus.Site.csproj
+++ b/source/Fasciculus.Site/Fasciculus.Site.csproj
@@ -22,6 +22,7 @@
     <ProjectReference Include="../Fasciculus.CodeAnalysis/Fasciculus.CodeAnalysis.csproj" />
     <ProjectReference Include="../Fasciculus.Extensions/Fasciculus.Extensions.csproj" />
     <ProjectReference Include="../Fasciculus.Markup/Fasciculus.Markup.csproj" />
+    <ProjectReference Include="../Fasciculus.NuGet/Fasciculus.NuGet.csproj" />
   </ItemGroup>
 
 </Project>
